[package]
name = "orbiter-rs"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for the Orbiter spaceflight simulator SDK"
license = "MIT"
authors = ["Thomas Antony"]

[dependencies]
cxx = "1.0.62"

[build-dependencies]
cxx-build = "1.0.62"

[[example]]
name = "Surveyor"
path = "examples/surveyor.rs"
crate-type = ["cdylib"]

[features]
docs = []

[package.metadata.docs.rs]
features = [ "docs" ] # This feature will be enabled during the docs.rs build
